[tool.poetry]
name = "manim-rhythm_graph"
version = "0.1.0"
description = ""
authors = ["RCJacH <RCJacH@outlook.com>"]
readme = "README.md"
packages = [{include = "manim_rhythm_graph", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
manim = "^0.17.2"

[tool.poetry.plugins."manim.plugins"]
"manim_rhythm_graph" = "manim_rhythm_graph"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
